# audiodecoder.hvl

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.hvl/: addon.xml.in
audiodecoder.hvl/resources/language/resource.language.ca_es/: strings.po
audiodecoder.hvl/resources/language/resource.language.da_dk/: strings.po
audiodecoder.hvl/resources/language/resource.language.de_de/: strings.po
audiodecoder.hvl/resources/language/resource.language.en_gb/: strings.po
audiodecoder.hvl/resources/language/resource.language.es_es/: strings.po
audiodecoder.hvl/resources/language/resource.language.eu_es/: strings.po
audiodecoder.hvl/resources/language/resource.language.fi_fi/: strings.po
audiodecoder.hvl/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.hvl/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.hvl/resources/language/resource.language.it_it/: strings.po
audiodecoder.hvl/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.hvl/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.hvl/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-libhvl-note.txt
lib/libhvl/: CMakeLists.txt  LICENSE.TXT
src/: HVLCodec.cpp  HVLCodec.h
